--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -26,7 +26,7 @@
 
 <body>
   <div class="container" style="width: 50%; margin:auto;">    
-    <h1 id="quizname"></h1>
+    <h1 id="quizname">{{quiz_id}}</h1>
     
     <div id="quizArea">
       <h3>Question <span id="questionNum">0</span></h3>
